[gd_scene load_steps=47 format=3 uid="uid://hjpl2fkxarlu"]

[ext_resource type="PhysicsMaterial" uid="uid://bfeae8w0xhk85" path="res://misc/SpinnerPhysicsMaterial.tres" id="1_nog7e"]
[ext_resource type="Script" path="res://scripts/princely.gd" id="2_s4v8x"]
[ext_resource type="AudioStream" uid="uid://c78cny74edbqb" path="res://sound_effects/JesterVoice/laugh2.ogg" id="3_f7l3r"]
[ext_resource type="AudioStream" uid="uid://c17uixcmuqil0" path="res://sound_effects/JesterVoice/laugh3.ogg" id="4_h81mb"]
[ext_resource type="AudioStream" uid="uid://d2dkwnmoostis" path="res://sound_effects/JesterVoice/jestercharge.ogg" id="5_akhrl"]
[ext_resource type="AudioStream" uid="uid://s1mihg48c2r" path="res://sound_effects/JesterVoice/jesterwoosh.ogg" id="6_csual"]
[ext_resource type="AudioStream" uid="uid://cm3b5t4anyy4c" path="res://sound_effects/JesterVoice/jestersparkle.ogg" id="7_03ikg"]
[ext_resource type="AudioStream" uid="uid://bstphbhqpcgnb" path="res://sound_effects/JesterVoice/jestersparkle2.ogg" id="8_ly1kp"]
[ext_resource type="PackedScene" uid="uid://bkeu04vc2k4sl" path="res://scenes/components/health_component.tscn" id="10_uptin"]
[ext_resource type="PackedScene" uid="uid://dygeouv8mk1x6" path="res://scenes/components/movement_component.tscn" id="11_6ecof"]
[ext_resource type="Texture2D" uid="uid://bp3dfip6sxo3n" path="res://asesprite/othersprites/explosion_no_background.png" id="12_2jq5q"]
[ext_resource type="Script" path="res://scripts/explosion.gd" id="13_3qpdo"]
[ext_resource type="AudioStream" uid="uid://dn6dyarhbfvub" path="res://sound_effects/bigexplosion.ogg" id="14_5cbwx"]
[ext_resource type="Texture2D" uid="uid://byavkxtngjkd0" path="res://scenes/sapphirespinner.png" id="15_ag1h6"]
[ext_resource type="Texture2D" uid="uid://de83bfxwn3y25" path="res://asesprite/othersprites/tiny_jestereffect.png" id="15_j8suu"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j716r"]
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("3_f7l3r")
stream_1/stream = ExtResource("4_h81mb")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7mwgt"]
random_pitch = 1.4
streams_count = 1
stream_0/stream = ExtResource("5_akhrl")

[sub_resource type="Animation" id="Animation_1iemr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5rcfm"]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fight_done"
}]
}

[sub_resource type="Animation" id="Animation_6jj7g"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_imnxb"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_clones"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dol65"]
_data = {
"RESET": SubResource("Animation_1iemr"),
"die": SubResource("Animation_5rcfm"),
"fade_in": SubResource("Animation_6jj7g"),
"fade_out": SubResource("Animation_imnxb")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j27fs"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("6_csual")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mps2w"]
random_pitch = 1.14
streams_count = 2
stream_0/stream = ExtResource("7_03ikg")
stream_1/stream = ExtResource("8_ly1kp")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yalp3"]
radius = 43.0
height = 138.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_p3f07"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tjcbn"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, 30, 1)
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.499998
radial_accel_max = 5.48
scale_min = 0.15
scale_max = 0.3
hue_variation_min = -2.23517e-08
hue_variation_max = 0.03
anim_speed_min = 1.0
anim_speed_max = 1.1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8in6e"]
playback_mode = 1
random_pitch = 1.07
streams_count = 1
stream_0/stream = ExtResource("14_5cbwx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f1l77"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08
anim_speed_min = 1.16
anim_speed_max = 1.2
turbulence_noise_strength = 2.49

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4f4il"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_j78a6"]
_data = [Vector2(0, 0.143464), 0.0, 0.0, 0, 0, Vector2(0.123288, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_mvpsi"]
curve = SubResource("Curve_j78a6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_asnq0"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(60, 30, 1)
angle_min = -161.8
angle_max = 136.8
angular_velocity_min = -39.51
angular_velocity_max = 32.32
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 1.5
alpha_curve = SubResource("CurveTexture_mvpsi")
anim_speed_min = 10.0
anim_speed_max = 14.65
anim_offset_min = 0.0674
anim_offset_max = 0.0674
turbulence_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_v1ytd"]
atlas = ExtResource("15_ag1h6")
region = Rect2(0, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvu8u"]
atlas = ExtResource("15_ag1h6")
region = Rect2(200, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvonq"]
atlas = ExtResource("15_ag1h6")
region = Rect2(400, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_apg1q"]
atlas = ExtResource("15_ag1h6")
region = Rect2(600, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot0l8"]
atlas = ExtResource("15_ag1h6")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypehj"]
atlas = ExtResource("15_ag1h6")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bfm3"]
atlas = ExtResource("15_ag1h6")
region = Rect2(400, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0tyf"]
atlas = ExtResource("15_ag1h6")
region = Rect2(600, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ifq"]
atlas = ExtResource("15_ag1h6")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdwk3"]
atlas = ExtResource("15_ag1h6")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_48qge"]
atlas = ExtResource("15_ag1h6")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_st11e"]
atlas = ExtResource("15_ag1h6")
region = Rect2(600, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_aobbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ytd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvu8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvonq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apg1q")
}],
"loop": true,
"name": &"Chainsawspin",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot0l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypehj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bfm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0tyf")
}],
"loop": false,
"name": &"chainstart",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st11e")
}],
"loop": true,
"name": &"normalspin",
"speed": 25.0
}]

[node name="Princely" type="RigidBody2D" groups=["boss", "enemy"]]
collision_layer = 2
collision_mask = 7
mass = 4.0
physics_material_override = ExtResource("1_nog7e")
lock_rotation = true
continuous_cd = 1
linear_damp = 1.0
script = ExtResource("2_s4v8x")
MAX_FORCE = 7000.0

[node name="Jesterlaugh" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_j716r")

[node name="Jestercharge" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7mwgt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_dol65")
}

[node name="JesterWoosh" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_j27fs")

[node name="Jestersparkle" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_mps2w")
volume_db = -10.895

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yalp3")

[node name="HealthComponent" parent="." instance=ExtResource("10_uptin")]
max_health = 10
current_health = 10
isBoss = true

[node name="MovementComponent" parent="." instance=ExtResource("11_6ecof")]

[node name="DashTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.75
one_shot = true

[node name="UnTargettingTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.3
one_shot = true

[node name="explosion" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_p3f07")
emitting = false
amount = 17
process_material = SubResource("ParticleProcessMaterial_tjcbn")
texture = ExtResource("12_2jq5q")
speed_scale = 1.1
script = ExtResource("13_3qpdo")

[node name="explode_SE" type="AudioStreamPlayer2D" parent="explosion"]
stream = SubResource("AudioStreamRandomizer_8in6e")
volume_db = -3.05
max_polyphony = 2

[node name="big_explosion" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_p3f07")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_f1l77")
texture = ExtResource("12_2jq5q")
one_shot = true
speed_scale = 0.9

[node name="bigexplode_SE" type="AudioStreamPlayer2D" parent="big_explosion"]
stream = SubResource("AudioStreamRandomizer_8in6e")
volume_db = 0.384
max_polyphony = 2

[node name="JesterDashTrail" type="GPUParticles2D" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("CanvasItemMaterial_4f4il")
emitting = false
amount = 69
process_material = SubResource("ParticleProcessMaterial_asnq0")
texture = ExtResource("15_j8suu")
lifetime = 1.5
randomness = 0.02
trail_lifetime = 0.69

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_aobbo")
animation = &"normalspin"
autoplay = "normalspin"
frame_progress = 0.262104
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://asesprite/ericsprite/sapphirespinner.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "928b9fb3e69d71107e6bcb370e80ca8f"

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="UnTargettingTimer" to="." method="_on_un_targetting_timer_timeout"]
